--- a/css/styles.css
+++ b/css/styles.css
@@ -687,17 +687,20 @@ button {
   margin-left: 93px;
 }
 
-.footer-subscription-title {
+.footer-subscription label {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  margin-bottom: 20px;
 }
 
-.subscription-input {
+.subscription-wrap {
+  padding-top: 20px;
+}
+
+.subscription-wrap input {
   width: 358px;
   height: 50px;
   border: none;
@@ -708,9 +711,10 @@ button {
   background-color: #2f303a;
   padding: 0 0 0 15px;
   outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscription-input::placeholder {
+.subscription-wrap input::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.3;
@@ -720,6 +724,10 @@ button {
 
 .subscription-wrap {
   display: flex;
+}
+
+.subscription-wrap input:focus {
+  border: 1px solid var(--accent-colo);
 }
 
 .btn-footer {
@@ -880,11 +888,15 @@ button {
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-left: 16px;
+  padding: 12px 16px;
   cursor: pointer;
   outline: none;
   color: rgba(117, 117, 117, 0.5);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-element textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .form-element textarea:focus {
@@ -926,6 +938,10 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.checkbox svg {
+  display: none;
+}
+
 .accept {
   display: flex;
   justify-content: center;
@@ -943,15 +959,19 @@ button {
   color: #757575;
 }
 
-.accept input + .checkbox {
+.accept input + label .checkbox {
   transition-property: background-color, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.accept input:checked + .checkbox {
+.accept input:checked + label .checkbox {
   background-color: #2196f3;
   border: 2px solid #2196f3;
+}
+
+.accept input:checked + label .checkbox svg {
+  display: block;
 }
 
 .checkbox-link {
